--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://default_ip:5432/default_d
 spring.datasource.username=${POSTGRES_USER:default_username}
 spring.datasource.password=${POSTGRES_PASSWORD:default_password}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+
